--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
     "jest": "^27.4.3",
+    "js-validation-tool": "^1.0.4",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.14",
     "mongoose-paginate-v2": "^1.4.2",
